redux packages, appeentry outside of the src

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "devDependencies": {
     "jest-expo": "25.0.0",
     "prop-types": "^15.6.1",
+    "react-redux": "^5.0.7",
     "react-test-renderer": "16.2.0",
+    "redux": "^3.7.2",
     "styled-components": "^3.2.1"
   },
   "main": "node_modules/expo/AppEntry.js",
