--- a/app.json
+++ b/app.json
@@ -10,6 +10,7 @@
     "slug": "winBtn",
     "version": "0.1.0",
     "isDetached": false,
+    "orientation": "portrait",
     "detach": {
       "scheme": "exp7d1cb9bfeb254259bc89d17f809a7706",
       "androidExpoViewUrl": "https://s3.amazonaws.com/exp-exponent-view-code/android-v2.3.0-sdk25.0.0-0c32461b-a7c6-4ddc-b85b-32a80c4f18d9.tar.gz"
