--- a/app.json
+++ b/app.json
@@ -11,6 +11,19 @@
     "version": "0.1.0",
     "isDetached": false,
     "orientation": "portrait",
+    "assetBundlePatterns": [
+      "./src/assets/lvls/*",
+      "./src/assets/audio/musicSrc/*",
+      "./src/assets/audio/src/*",
+      "./src/assets/btn/*",
+      "./src/assets/clock/*",
+      "./src/assets/note/*",
+      "./src/assets/switch/*",
+      "./src/assets/toolTable/*",
+      "./src/assets/winBtn/*",
+      "./src/assets/clock/*",
+      "./src/assets/*"
+    ],
     "detach": {
       "scheme": "exp7d1cb9bfeb254259bc89d17f809a7706",
       "androidExpoViewUrl": "https://s3.amazonaws.com/exp-exponent-view-code/android-v2.3.0-sdk25.0.0-0c32461b-a7c6-4ddc-b85b-32a80c4f18d9.tar.gz"
